增加题解962/1014及测试用例.